--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230917150033">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230917151102">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -738,7 +738,7 @@
                 </div>
                 <div class="blog__body">
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">The Timeless Appeal of Vintage Fashion</a>
+                        <a href="#" class="card-blog__title title3">The Timeless Appeal of Vintage Fashion</a>
                         <div class="card-blog__desc">
                             <p>
                                 In today's fast-paced world of fashion, where trends come and go in the blink of an eye,
@@ -768,7 +768,7 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">20 Essential Wardrobe for Effortless Style</a>
+                        <a href="#" class="card-blog__title title3">20 Essential Wardrobe for Effortless Style</a>
                         <div class="card-blog__desc">
                             <p>
                                 Building a versatile and timeless wardrobe can sometimes feel like a daunting task. With
@@ -802,7 +802,7 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">Study Finds Exercise Boosts Brain Power</a>
+                        <a href="#" class="card-blog__title title3">Study Finds Exercise Boosts Brain Power</a>
                         <div class="card-blog__desc">
                             <p>
                                 Study Finds Exercise Boosts Brain Power": Recent research highlights the cognitive
@@ -831,7 +831,7 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">New Research Shows Benefits of Meditation for Stress
+                        <a href="#" class="card-blog__title title3">New Research Shows Benefits of Meditation for Stress
                             Relief</a>
                         <div class="card-blog__desc">
                             <p>
@@ -861,7 +861,7 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">Is Coffee Really Good for Your Health?</a>
+                        <a href="#" class="card-blog__title title3">Is Coffee Really Good for Your Health?</a>
                         <div class="card-blog__desc">
                             <p>
                                 Is Coffee Really Good for Your Health?": Examining the potential health advantages and
@@ -889,7 +889,8 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">The Power of a Smile: How It Can Improve Your Mood</a>
+                        <a href="#" class="card-blog__title title3">The Power of a Smile: How It Can Improve Your
+                            Mood</a>
                         <div class="card-blog__desc">
                             <p>
                                 The Power of a Smile: How It Can Improve Your Mood": Exploring the psychological
@@ -918,7 +919,7 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">The Timeless Appeal of Vintage Fashion</a>
+                        <a href="#" class="card-blog__title title3">The Timeless Appeal of Vintage Fashion</a>
                         <div class="card-blog__desc">
                             <p>
                                 In today's fast-paced world of fashion, where trends come and go in the blink of an eye,
@@ -948,7 +949,7 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">20 Essential Wardrobe for Effortless Style</a>
+                        <a href="#" class="card-blog__title title3">20 Essential Wardrobe for Effortless Style</a>
                         <div class="card-blog__desc">
                             <p>
                                 Building a versatile and timeless wardrobe can sometimes feel like a daunting task. With
@@ -982,7 +983,7 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">Study Finds Exercise Boosts Brain Power</a>
+                        <a href="#" class="card-blog__title title3">Study Finds Exercise Boosts Brain Power</a>
                         <div class="card-blog__desc">
                             <p>
                                 Study Finds Exercise Boosts Brain Power": Recent research highlights the cognitive
@@ -1011,7 +1012,7 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">New Research Shows Benefits of Meditation for Stress
+                        <a href="#" class="card-blog__title title3">New Research Shows Benefits of Meditation for Stress
                             Relief</a>
                         <div class="card-blog__desc">
                             <p>
@@ -1041,7 +1042,7 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">Is Coffee Really Good for Your Health?</a>
+                        <a href="#" class="card-blog__title title3">Is Coffee Really Good for Your Health?</a>
                         <div class="card-blog__desc">
                             <p>
                                 Is Coffee Really Good for Your Health?": Examining the potential health advantages and
@@ -1069,7 +1070,8 @@
                         </div>
                     </article>
                     <article class="blog__card card-blog">
-                        <a href="#" class="card-blog__title">The Power of a Smile: How It Can Improve Your Mood</a>
+                        <a href="#" class="card-blog__title title3">The Power of a Smile: How It Can Improve Your
+                            Mood</a>
                         <div class="card-blog__desc">
                             <p>
                                 The Power of a Smile: How It Can Improve Your Mood": Exploring the psychological
@@ -1184,7 +1186,7 @@
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230917150033"></script>
+    <script src="js/app.min.js?_v=20230917151102"></script>
 </body>
 
 </html>
