--- a/article.html
+++ b/article.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230918114226">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230918215821">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -733,7 +733,7 @@
             <div class="article__container2 container2">
                 <div class="article__wrapper">
                     <article class="article__body">
-                        <h1 class="article__main-title">
+                        <h1 class="article__title">
                             The Evolution of Fashion: From Functional Attire to Artistic Expression
                         </h1>
                         <div class="article__author author">
@@ -813,8 +813,8 @@
                             </nav>
                         </div>
                         <section class="article__section">
-                            <h3 class="article__title3 title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h3 class="article__title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who predicted, "Learning to code will eventually be as
@@ -827,7 +827,7 @@
                                 will eventually be as useful as learning Ancient Greek." Today, learning to code is
                                 being over-promised as a silver bullet for long-term career succ
                             </p>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who predicted, "Learning to code will eventually be as
@@ -863,8 +863,8 @@
                             </div>
                         </section>
                         <section class="article__section">
-                            <h3 class="article__title3 title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h3 class="article__title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who p
@@ -881,7 +881,7 @@
                             </ol>
                         </section>
                         <section class="article__section">
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who predicted, "Learning to code will eventually be as
@@ -891,7 +891,7 @@
                                 bullet for long-term career succ Turns out, predicting the future can offend people,
                                 even
                             </p>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <div class="article__list-title">Turns out, predicting:</div>
                             <ul class="article__list">
                                 <li class="article__item">Title</li>
@@ -914,9 +914,9 @@
                             </div>
                         </section>
                         <section class="article__section">
-                            <h2 class="article__title">History of Match Three Games</h2>
-                            <h3 class="article__title3 title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h2 class="article__title2">History of Match Three Games</h2>
+                            <h3 class="article__title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who predicted, "Learning to code will eventually be as useful
@@ -936,8 +936,8 @@
                             </figure>
                         </section>
                         <section class="article__section">
-                            <h3 class="article__title3 title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h3 class="article__title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who p
@@ -949,11 +949,11 @@
                             </div>
                         </section>
                         <section class="article__section">
-                            <h2 class="article__title">
+                            <h2 class="article__title2">
                                 How We at iLogos Game Studios Create Match 3 Games
                             </h2>
-                            <h3 class="article__title3 title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h3 class="article__title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who predicted, "Learning to code will eventually be as useful
@@ -963,8 +963,8 @@
                                 will eventually be as useful as learning Ancient Greek." Today, learning to code is
                                 being over-promised as a silver bullet for long-term career succ
                             </p>
-                            <h3 class="article__title3 title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h3 class="article__title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who p
@@ -979,9 +979,9 @@
                             </ol>
                         </section>
                         <section class="article__section">
-                            <h2 class="article__title">Match 3 Game Features</h2>
-                            <h3 class="article__title3 title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h2 class="article__title2">Match 3 Game Features</h2>
+                            <h3 class="article__title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who predicted, "Learning to code will eventually be as useful
@@ -1001,8 +1001,8 @@
                             </ol>
                         </section>
                         <section class="article__section">
-                            <h3 class="article__title3 title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
-                            <h4 class="article__title4 title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
+                            <h3 class="article__title3">2030: Maya Louvière on IPOs, The No Code Movement</h3>
+                            <h4 class="article__title4">2030: Maya Louvière on IPOs, The No Code Movement</h4>
                             <p class="article__text">
                                 Turns out, predicting the future can offend people, even if it turn. In 2019, we
                                 interviewed Maya Sveltman who p
@@ -1213,13 +1213,13 @@
         </div>
         <div class="cookies__image">
             <picture>
-                <source data-srcset="img/cookie.gif" srcset="img/plug.png" type="image/webp">
-                <img data-src="img/cookie.gif" src="img/plug.png" alt="Image">
+                <source data-srcset="img/cookie_small.gif" srcset="img/plug.png" type="image/webp">
+                <img data-src="img/cookie_small.gif" src="img/plug.png" alt="Image">
             </picture>
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230918114226"></script>
+    <script src="js/app.min.js?_v=20230918215821"></script>
 </body>
 
 </html>
