--- a/error.html
+++ b/error.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230918114226">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230918215821">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -719,15 +719,17 @@
 </header>
 
         <div class="error-page">
-            <div class="error-page__body">
-                <div class="error-page__image">
-                    <picture>
-                        <source data-srcset="img/error-page/image.gif" srcset="img/plug.png" type="image/webp">
-                        <img data-src="img/error-page/image.gif" src="img/plug.png" alt="Image">
-                    </picture>
+            <div class="error-page__container container2">
+                <div class="error-page__body">
+                    <div class="error-page__image">
+                        <picture>
+                            <source data-srcset="img/error-page/image.gif" srcset="img/plug.png" type="image/webp">
+                            <img data-src="img/error-page/image.gif" src="img/plug.png" alt="Image">
+                        </picture>
+                    </div>
+                    <h1 class="error-page__title title3">Ooops! Page not found</h1>
+                    <p class="error-page__desc">Don't get sad. Check out something else from us!</p>
                 </div>
-                <h1 class="error-page__title title3">Ooops! Page not found</h1>
-                <p class="error-page__desc">Don't get sad. Check out something else from us!</p>
             </div>
         </div>
 
@@ -808,13 +810,13 @@
         </div>
         <div class="cookies__image">
             <picture>
-                <source data-srcset="img/cookie.gif" srcset="img/plug.png" type="image/webp">
-                <img data-src="img/cookie.gif" src="img/plug.png" alt="Image">
+                <source data-srcset="img/cookie_small.gif" srcset="img/plug.png" type="image/webp">
+                <img data-src="img/cookie_small.gif" src="img/plug.png" alt="Image">
             </picture>
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230918114226"></script>
+    <script src="js/app.min.js?_v=20230918215821"></script>
 </body>
 
 </html>
