--- a/policy.html
+++ b/policy.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230918114226">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230918215821">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -1258,13 +1258,13 @@
         </div>
         <div class="cookies__image">
             <picture>
-                <source data-srcset="img/cookie.gif" srcset="img/plug.png" type="image/webp">
-                <img data-src="img/cookie.gif" src="img/plug.png" alt="Image">
+                <source data-srcset="img/cookie_small.gif" srcset="img/plug.png" type="image/webp">
+                <img data-src="img/cookie_small.gif" src="img/plug.png" alt="Image">
             </picture>
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230918114226"></script>
+    <script src="js/app.min.js?_v=20230918215821"></script>
 </body>
 
 </html>
