--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <title>Dresshub</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.min.css?_v=20230918114226">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230918215821">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -923,7 +923,7 @@
                                                     <div class="about-product__btns">
                                                         <button type="button"
                                                             class="about-product__btn btn-green">Buy</button>
-                                                        <button type="button" class="about-product__btn btn-white">
+                                                        <button type="button" class="about-product__get btn-white">
                                                             Get a Sale Alert
                                                             <svg>
                                                                 <use href="img/icons/icons.svg#heart"></use>
@@ -1198,7 +1198,7 @@
                     </div>
                     <div class="product__goods goods-product">
                         <div class="goods-product__body">
-                            <h3 class="goods-product__title title3">Similar</h3>
+                            <div class="goods-product__title title3">Similar</div>
                             <div class="goods-product__cat catalog">
                                 <div class="catalog__item prod-card">
                                     <div class="prod-card__labels">
@@ -1645,7 +1645,7 @@
                     </div>
                     <div class="product__goods goods-product">
                         <div class="goods-product__body">
-                            <h3 class="goods-product__title title3">Related</h3>
+                            <div class="goods-product__title title3">Related</div>
                             <div class="goods-product__cat catalog">
                                 <div class="catalog__item prod-card">
                                     <div class="prod-card__labels">
@@ -2168,13 +2168,13 @@
         </div>
         <div class="cookies__image">
             <picture>
-                <source data-srcset="img/cookie.gif" srcset="img/plug.png" type="image/webp">
-                <img data-src="img/cookie.gif" src="img/plug.png" alt="Image">
+                <source data-srcset="img/cookie_small.gif" srcset="img/plug.png" type="image/webp">
+                <img data-src="img/cookie_small.gif" src="img/plug.png" alt="Image">
             </picture>
         </div>
     </div>
 </div>
-    <script src="js/app.min.js?_v=20230918114226"></script>
+    <script src="js/app.min.js?_v=20230918215821"></script>
 </body>
 
 </html>
